[tool.poetry]
name = "mill"
version = "0.1.0"
description = "fuzzy class factory"
authors = ["tonyo <tony.odell@live.com>"]
license = "GNU GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[project.optional-dependencies]
dev = [
  "black=^23.11.0",
  "pytest=^7.4.3",
  "pylint=^3.0.2",
  "flake8=^6.1.0",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
